--- a/paper.bib
+++ b/paper.bib
@@ -41,4 +41,45 @@
   note         = {Accessed: 17-12-2017},
 }
 
+@Article{quinlan1986induction,
+  author    = {Quinlan, J. Ross},
+  title     = {Induction of decision trees},
+  journal   = {Machine learning},
+  year      = {1986},
+  volume    = {1},
+  number    = {1},
+  pages     = {81--106},
+  publisher = {Springer},
+}
+
+@Article{breiman2001random,
+  author    = {Breiman, Leo},
+  title     = {Random forests},
+  journal   = {Machine learning},
+  year      = {2001},
+  volume    = {45},
+  number    = {1},
+  pages     = {5--32},
+  publisher = {Springer},
+}
+
+@Book{haykin2009neural,
+  title     = {Neural networks and learning machines},
+  publisher = {Pearson Upper Saddle River, NJ, USA:},
+  year      = {2009},
+  author    = {Haykin, Simon S and Haykin, Simon S and Haykin, Simon S and Haykin, Simon S},
+  volume    = {3},
+}
+
+@Article{rumelhart1986learning,
+  author    = {Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  title     = {Learning representations by back-propagating errors},
+  journal   = {nature},
+  year      = {1986},
+  volume    = {323},
+  number    = {6088},
+  pages     = {533--536},
+  publisher = {Nature Publishing Group},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
