My parts of Arbitrated Ensamble for Time Series Forecasting finished

--- a/paper.bib
+++ b/paper.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{VtorCerqueira2017,
-  author  = {Vtor Cerqueira, Lus Torgo, Fabio Pinto and Carlos Soares},
+  author  = {Cerqueira, V{\'\i}tor and Torgo, Lu{\'\i}s and Soares, Carlos and Pinto, Fabio},
   title   = {Arbitrated Ensemble for Time Series Forecasting},
   journal = {ECML PKDD},
   year    = {2017},
@@ -80,6 +80,17 @@
   number    = {6088},
   pages     = {533--536},
   publisher = {Nature Publishing Group},
+}
+
+@Article{ortega2001arbitrating,
+  author    = {Ortega, Julio and Koppel, Moshe and Argamon, Shlomo},
+  title     = {Arbitrating among competing classifiers using learned referees},
+  journal   = {Knowledge and Information Systems},
+  year      = {2001},
+  volume    = {3},
+  number    = {4},
+  pages     = {470--490},
+  publisher = {Springer},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
